--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -25,6 +25,10 @@
     <link rel="stylesheet" type="text/css" href="/video-annotations/styles/styles.css" />
  
     <link rel="stylesheet" type="text/css" href="/ng-tags-input/ng-tags-input.min.css">
+
+    <!-- Chart and related widget -->
+    <link rel="stylesheet" type="text/css" href="/chartjs/angular-chart.min.css" />
+
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
