--- a/views/admin-lte/profile.ejs
+++ b/views/admin-lte/profile.ejs
@@ -121,5 +121,6 @@
 <script src="/gridstack/gridstack.js"></script>
 <!--add chart.js source-->
 <script src="/chartjs/Chart.min.js"></script>
+<script src="/chartjs/angular-chart.min.js"></script>
 
 <% include footer %>
