--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -18,19 +18,16 @@
   position: absolute;
 }
 .slideRectSpan{
-  color: black;
+  color: white;
+  font-weight: bold;
+  padding-left: 2pt;
+  padding-right: 2pt;
+  margin-left: 2px;
 }
 
 .slideRect{
 }
-.hovered{
-  opacity:1.0 !important;
-  transition: all 2.0s linear;
- -webkit-transition: all 0.3s linear;
- -moz-transition: all 0.3s linear;
- -ms-transition: all 0.3s linear;
- -o-transition: all 0.3s linear;
-}
+
 .slideRect:hover{
 }
 
