drawing annotation Zones now more intuitive

--- a/views/slide-viewer/header.ejs
+++ b/views/slide-viewer/header.ejs
@@ -9,7 +9,8 @@
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="/ionicons/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <link href="/gridstack/gridstack.min.css" rel="stylesheet" type="text/css" />
-    <link href="/slide-viewer/css/slideviewer.css" rel="stylesheet" tyle="text/css" />
+    <link href="/slide-viewer/css/slideviewer.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/slide-viewer/css/pick-a-color-1.2.3.min.css" type="text/css" />
 
     <link href="/slide-viewer/css/text_layer_builder.css" rel="stylesheet" tyle="text/css" />
     <link rel="icon" href="/favicon.png" type="image/png" />
