--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -113,6 +113,9 @@
 
                              <div class="control-group">
                                <div class="controls">
+
+
+
                                  <button type="submit" class="btn btn-default">Submit</button>
                                </div>
                              </div>
@@ -224,11 +227,14 @@
 
 <link rel="stylesheet" href="../pdfjs/build/components/pdf_viewer.css">
 
+
 <!-- for legacy browsers -->
 <script src="../pdfjs/build/components/compatibility.js"></script>
 <script src="../pdfjs/build/pdf.js"></script>
 <script src="../pdfjs/build/components/pdf_viewer.js"></script>
+<script src="js/autosize.input.min.js"></script>
 <script src="../pdfjs/js/pageviewer.js"></script>
 <script src="js/drawdiv.js"></script>
-
+<script src="js/tinycolor-0.9.15.min.js"></script>
+<script src="js/pick-a-color-1.2.3.min.js"></script>
 <% include ../admin-lte/footer %>
