Fixed some bugs + tag text coloring

--- a/views/slide-viewer/slideViewer.ejs
+++ b/views/slide-viewer/slideViewer.ejs
@@ -141,8 +141,8 @@
                           </div>
                           Filter by:
                           <div >
-                            <input type="hidden" id="filterValueText" ng-model="filtersRaw"></input>
-                            <input type="hidden" id="pageFilter" ng-model="pageFilter" value = "{{currentPageNumber}}"></input>
+                            <input type="" id="filterValueText" ng-model="filtersRaw"></input>
+                            <!--<input type="hidden" id="pageFilter" ng-model="pageFilter" value = "{{currentPageNumber}}"></input>-->
                           </div>
                         </div>
                         <!--<div>
