integrating pdf initial commit

--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -37,6 +37,9 @@
                             <% include nodeDetailContentPreview %>
                         </div>
                     </div>
+                    <div class="tab-pane active" id="pdf">
+                        <% include nodeDetailContentPdf %>
+                    </div>
                     <div class="tab-pane" id="updates">
                         <% include nodeDetailContentUpdates %>
                     </div>
