--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -23,11 +23,18 @@
     <!-- videogular -->
     <link rel="stylesheet" type="text/css" href="/videogular-themes-default/videogular.css">
     <link rel="stylesheet" type="text/css" href="/video-annotations/styles/styles.css" />
- 
+
     <link rel="stylesheet" type="text/css" href="/ng-tags-input/ng-tags-input.min.css">
 
     <!-- Chart and related widget -->
     <link rel="stylesheet" type="text/css" href="/chartjs/angular-chart.min.css" />
+
+    <!-- Slide viewer css -->
+    <link href="/slide-viewer/css/slideviewer.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/slide-viewer/css/pick-a-color-1.2.3.min.css" type="text/css" />
+    <link href="/slide-viewer/css/text_layer_builder.css" rel="stylesheet" tyle="text/css" />
+    <link rel="stylesheet" href="/pdfjs/build/components/pdf_viewer.css">
+
 
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
