added logic to switch between pdf and video tab

--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -32,12 +32,10 @@
                 <!-- end tab menu -->
 
                 <div class="tab-content">
-                    <div class="tab-pane active" id="preview">
-                        <div class="col-xs-12 col-md-8">
-                            <% include nodeDetailContentPreview %>
-                        </div>
+                    <div class="tab-pane" id="video">
+                        <% include nodeDetailContentPreview %>
                     </div>
-                    <div class="tab-pane active" id="pdf">
+                    <div class="tab-pane" id="pdf">
                         <% include nodeDetailContentPdf %>
                     </div>
                     <div class="tab-pane" id="updates">
