--- a/views/admin-lte/catalogs/nodeDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPreview.ejs
@@ -1,7 +1,12 @@
 <link rel="stylesheet" type="text/css" href="/jquery-ui/themes/black-tie/jquery-ui.css">
-<br/>
-<div class="container">
-    <section>
-        <va-widget video-source="{{treeNode.resources[0].link}}" video-id="{{treeNode.resources[0]._id}}"></va-widget>
-    </section>
+<div class="col-xs-12 col-md-8">
+    <div class="container" ng-show="!isVideoExist && !isPdfExist">
+        There is no resources here.
+    </div>
+    <div class="container" ng-show="isVideoExist">
+        <section>
+            <va-widget video-source="{{treeNode.resources[0].link}}"
+                       video-id="{{treeNode.resources[0]._id}}"></va-widget>
+        </section>
+    </div>
 </div>
