--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -47,7 +47,7 @@
 <script src="/admin-lte/js/app.min.js" type="text/javascript"></script>
 <script src="/admin-lte/js/libs.js" type="text/javascript"></script>
 
-
+<% if(typeof(isInNodeDetailPage) != 'undefined' && isInNodeDetailPage){ %>
 <!-- slide-viewer stuff -->
 <script src="/slide-viewer/js/slideviewer.js"></script>
 <script src="/slide-viewer/js/jquery.fullscreen-min.js"></script>
@@ -61,3 +61,4 @@
 <script src="/slide-viewer/js/drawdiv.js"></script>
 <script src="/slide-viewer/js/tinycolor-0.9.15.min.js"></script>
 <script src="/slide-viewer/js/pick-a-color-1.2.3.min.js"></script>
+<% } %>
