--- a/views/admin-lte/discussion/topics.ejs
+++ b/views/admin-lte/discussion/topics.ejs
@@ -92,6 +92,7 @@
                                          is-deleted="re.content =='[DELETED]'"
                                          edit-action="editReply(re)"
                                          delete-action="deletePost(re._id)"
+                                         show-control="true"
                                         ></comment>
                             </div>
 
