--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -103,7 +103,10 @@
                                 <div class="controls">
 
 
-                                    <button type="submit" class="btn btn-default">Submit
+                                    <!--<button type="submit" class="btn btn-default">Submit
+                                    </button>-->
+                                    <button class="btn btn-primary"> Add Comment
+                                        <spinner show="isLoading"></spinner>
                                     </button>
                                 </div>
                             </div>
