--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -48,68 +48,50 @@
                     <div class="annotation-wrapper">
                         <div id="showComments">
                         </div>
-                        <form action='/slide-viewer/submitComment' method="POST"
-                              onsubmit="return commentOnSubmit()">
-                            <fieldset>
-                                <div class="control-group">
-                                    <label for="rawText">Commenting as
-                                        {{currentUser.username}}</label>
+                        <form name="commentForm" ng-submit="submitComment(comment,'ajaxCommentSubmitResult')">
+  <fieldset>
+    <div class="control-group">
+       <label for="rawText">Commenting as {{currentUser.username}}</label>
+       <div class="controls">
+         <textarea class="form-control" id="rawText" name="rawText" ng-model="comment.rawText" placeholder="rawText"></textarea>
+       </div>
+     </div>
+     <div class="control-group">
+       <div class="controls">
+         <input type="hidden" class="form-control" id="author" name="author" value="{{currentUser.username}}" >
+         <input type="hidden" class="form-control" id="pageNumber" name="pageNumber" value= "{{currentPageNumber}}" >
+       </div>
+     </div>
+     <div class="control-group">
+       <div class="controls">
+         <input class="form-control" id="tagNames" name="tagNames" placeholder="tagNames" type="hidden" ng-model="comment.tagNames">
+         <input class="form-control" id="tagRelPos" name="tagRelPos" placeholder="tagRelPos" type="hidden" ng-model="comment.tagRelPos">
+         <input class="form-control" id="tagRelCoord" name="tagRelCoord" placeholder="tagRelCoord" type="hidden" ng-model="comment.tagRelCoord">
+         <input class="form-control" id="tagColor" name="tagColor" placeholder="tagColor" type="hidden" ng-model="comment.tagColor">
 
-                                    <div class="controls">
-                                                                <textarea class="form-control" id="rawText"
-                                                                          name="rawText"
-                                                                          placeholder="rawText"></textarea>
-                                    </div>
-                                </div>
-                                <div class="control-group">
-                                    <div class="controls">
-                                        <input type="hidden" class="form-control" id="author"
-                                               name="author" value="{{currentUser.username}}">
-                                        <input type="hidden" class="form-control"
-                                               id="pageNumber" name="pageNumber"
-                                               value="{{currentPageNumber}}">
-                                    </div>
-                                </div>
-                                <div class="control-group">
-                                    <div class="controls">
-                                        <input class="form-control" id="tagNames"
-                                               name="tagNames" placeholder="tagNames"
-                                               type="hidden">
-                                        <input class="form-control" id="tagRelPos"
-                                               name="tagRelPos" placeholder="tagRelPos"
-                                               type="hidden">
-                                        <input class="form-control" id="tagRelCoord"
-                                               name="tagRelCoord" placeholder="tagRelCoord"
-                                               type="hidden">
-                                        <input class="form-control" id="tagColor"
-                                               name="tagColor" placeholder="tagColor"
-                                               type="hidden">
-
-                                    </div>
-                                </div>
-                                <!--Used as Template for annotation zone items -->
-                                <div id="annotationZoneSubmitTemplate"
-                                     style="visibility: hidden;">
-                                    <button class="btn btn-default"
-                                            onclick="removeAnnotationZone(this);">Remove
-                                    </button>
-                                </div>
-                                <!-- Will be filled when annotation zones are created -->
-                                <div id="annotationZoneSubmitList">
-                                </div>
+       </div>
+     </div>
+     <!--Used as Template for annotation zone items -->
+     <div id="annotationZoneSubmitTemplate" style="visibility: hidden;">
+       <button class="btn btn-default" onclick="removeAnnotationZone(this);">Remove</button>
+     </div>
+     <!-- Will be filled when annotation zones are created -->
+     <div id="annotationZoneSubmitList">
+     </div>
 
 
-                                <div class="control-group">
-                                    <div class="controls">
+     <div class="control-group">
+       <div class="controls">
 
 
-                                        <button type="submit" class="btn btn-default">Submit
-                                        </button>
-                                    </div>
-                                </div>
-                            </fieldset>
 
-                        </form>
+         <button type="submit" class="btn btn-default">Submit</button>
+       </div>
+     </div>
+   </fieldset>
+
+</form>
+
                         <div id="annotationZoneSubmitListMovables">
                             <button class="btn btn-default" onclick="createMovableAnnZone();">
                                 Add Annotation Zone
