--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -4,9 +4,8 @@
         <div class="slide-container col-sm-8 col-md-8">
             <div id="viewerWrapper">
 
-                <div id="viewerContainer">
-                    <div id="viewer" class="pdfViewer"></div>
-                </div>
+                <pdf-viewer source="{{pdfFile.link}}"></pdf-viewer>
+
                 <div id="annotationZone">
                     <!--<div movable style="background-color:yellow;height:100px;width:100px;" ></div>-->
                 </div>
