--- a/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
+++ b/frontend-modules/angular/views/nodeDetail/pdf-viewer.html
@@ -3,9 +3,9 @@
 </div>
 
 <!-- pdf pagination -->
-<div id="slideNavigationWrapper">
-    <div id="slideNavigationProgress">
-        <div id="slideNavigationCurrentProgress"></div>
+<div class="slideNavigationWrapper">
+    <div class="slideNavigationProgress">
+        <div class="slideNavigationCurrentProgress"></div>
     </div>
     <div id="slideNavigation" class="row notSelectable" ng-cloak>
         <div class="col-md-4 text-center"></div>
@@ -13,11 +13,13 @@
             <div class="row">
             <a class="glyphicon glyphicon-triangle-left iconSlideNav cursor"
                   aria-hidden="true"
+                  ng-hide="currentPageNumber == 1"
                   ng-click="changePageNumber(-1)"></a>
             <span id="slideNavText"
                   class="fsSlideNav">{{currentPageNumber}}/{{totalPage}}</span>
             <a class="glyphicon glyphicon-triangle-right iconSlideNav cursor"
                   aria-hidden="true"
+                  ng-hide="currentPageNumber == totalPage"
                   ng-click="changePageNumber(1)"></a>
             </div>
         </div>
