--- a/views/my-course/followingCourse.ejs
+++ b/views/my-course/followingCourse.ejs
@@ -1,12 +1,14 @@
-<div class="box-body no-padding" style="width:250px; height:250px" ng-controller="CatListController">
-	<table class="table table-stripped">
+<div class="box-body no-padding" ng-controller="CatListController">
+	<table class="table table-striped">
 		<tbody>
-			<tr>
-				<th style="width: 35px">{{title}}</th>
-			</tr>
-			<tr ng-repeat="cat in categories">
-				<td> {{cat.name}} </td>
-			</tr>
+		<tr>
+			<th style="width:10px;">Nr.</th>
+			<th>{{title}}</th>
+		</tr>
+		<tr ng-repeat="cat in categories">
+			<td>{{$index+1}}</td>
+			<td> {{cat.name}} </td>
+		</tr>
 		</tbody>
 	</table>
 </div>
