--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -18,7 +18,7 @@
 
                 <button class="btn btn-default" onclick="switchCommentSubmissionDisplay();">Write comment</button>
                 <div id="commentSubmissionDiv" style="display:none;">
-                    <form name="commentForm" ng-submit="submitComment(comment,'ajaxCommentSubmitResult')">
+                    <form name="commentForm" ng-submit="submitComment()">
                         <fieldset>
                             <div class="control-group">
                                 <label for="rawText">Commenting as {{currentUser.username}}</label>
@@ -28,27 +28,7 @@
                                               ng-model="comment.rawText" placeholder="rawText"></textarea>
                                 </div>
                             </div>
-                            <div class="control-group">
-                                <div class="controls">
-                                    <input type="hidden" class="form-control" id="author" name="author"
-                                           value="{{currentUser.username}}">
-                                    <input type="hidden" class="form-control" id="pageNumber" name="pageNumber"
-                                           value="{{currentPageNumber}}">
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <div class="controls">
-                                    <input class="form-control" id="tagNames" name="tagNames" placeholder="tagNames"
-                                           type="hidden" ng-model="comment.tagNames">
-                                    <input class="form-control" id="tagRelPos" name="tagRelPos" placeholder="tagRelPos"
-                                           type="hidden" ng-model="comment.tagRelPos">
-                                    <input class="form-control" id="tagRelCoord" name="tagRelCoord"
-                                           placeholder="tagRelCoord" type="hidden" ng-model="comment.tagRelCoord">
-                                    <input class="form-control" id="tagColor" name="tagColor" placeholder="tagColor"
-                                           type="hidden" ng-model="comment.tagColor">
 
-                                </div>
-                            </div>
                             <!--Used as Template for annotation zone items -->
                             <div id="annotationZoneSubmitTemplate" style="visibility: hidden;">
                                 <button class="btn btn-default" onclick="removeAnnotationZone(this);">Remove</button>
