--- a/public/video-annotations/styles/styles.css
+++ b/public/video-annotations/styles/styles.css
@@ -1,11 +1,11 @@
-.annotations-viewer {
+/*.annotations-viewer {
     width: 100%;
     height: 320px;
     margin-top: 10px;
     overflow: auto;
     border: 1px #8EC1DA solid;
     box-sizing: border-box;
-}
+}*/
 
 #inline-va-container {
     position: absolute;
