Completed server-side validation

--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -51,11 +51,12 @@
                         </fieldset>
 
                     </form>
-                </div>
-                <div id="annotationZoneSubmitListMovables">
-                    <button class="btn btn-default" onclick="createMovableAnnZone();">
-                        Add Annotation Zone
-                    </button>
+                  <div id="annotationZoneSubmitListMovables">
+                      <button class="btn btn-default" onclick="createMovableAnnZone();">
+                          Add Annotation Zone
+                      </button>
+                  </div>
+                  <label id="commentSubmissionResponse" style="display: none;"></label>
                 </div>
 
             </div>
