added new colorpicker

--- a/views/admin-lte/jsfooter.ejs
+++ b/views/admin-lte/jsfooter.ejs
@@ -59,6 +59,7 @@
 
 <% if(typeof(isInNodeDetailPage) != 'undefined' && isInNodeDetailPage){ %>
 <script src="/slide-viewer/js/autosize.input.min.js"></script>
+<script src="/slide-viewer/js/jquery.simplecolorpicker.js"></script>
 <script src="/slide-viewer/js/drawdiv.js"></script>
 <script src="/slide-viewer/js/tinycolor-0.9.15.min.js"></script>
 <script src="/slide-viewer/js/pick-a-color-1.2.3.min.js"></script>
