--- a/views/admin-lte/header.ejs
+++ b/views/admin-lte/header.ejs
@@ -31,7 +31,7 @@
 
     <!-- Slide viewer css -->
     <link href="/slide-viewer/css/slideviewer.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="/slide-viewer/css/pick-a-color-1.2.3.min.css" type="text/css" />
+    <!--<link rel="stylesheet" href="/slide-viewer/css/pick-a-color-1.2.3.min.css" type="text/css" />-->
     <link href="/slide-viewer/css/text_layer_builder.css" rel="stylesheet" tyle="text/css" />
     <link href="/slide-viewer/css/jquery.simplecolorpicker.css" rel="stylesheet" tyle="text/css" />
     <link href="/slide-viewer/css/jquery.simplecolorpicker-regularfont.css" rel="stylesheet" tyle="text/css" />
