Prepared for tag name validation

--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -56,6 +56,10 @@
                           Add Annotation Zone
                       </button>
                   </div>
+                  <button class="btn btn-default" onclick="displayDebug();">
+                      DEBUG BUTTON
+                  </button>
+
                   <label id="commentSubmissionResponse" style="display: none;"></label>
                 </div>
 
