--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -15,6 +15,13 @@
 
 }
 
+ .btn.btn-white.btn-link{
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-right: 6px;
+  padding-left: 6px;
+}
+
 .btn.btn-default.color-dropdown.dropdown-toggle.no-hex{
   padding: 1px;
 }
