--- a/views/admin-lte/discussion/topics.ejs
+++ b/views/admin-lte/discussion/topics.ejs
@@ -92,6 +92,8 @@
                                          is-deleted="re.content =='[DELETED]'"
                                          edit-action="editReply(re)"
                                          delete-action="deletePost(re._id)"
+                                         show-delete-button="true"
+                                         show-edit-button="true"
                                          show-control="true"
                                         ></comment>
                             </div>
