--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -57,6 +57,11 @@
                       </button>
                   </div>
                   <label id="commentSubmissionResponse" style="display: none;"></label>
+                  <div id="errorResponseAreaforTagIds" class="errorResponseAreaforTags">
+                    <div id="tagErrorList" ng-repeat="(key, item) in tagNameErrors">
+                      The annotation zone with the name "{{item.name}}" has thrown following error: {{item.text}}
+                    </div>
+                  </div>
                 </div>
 
             </div>
