Changed html line

--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -68,7 +68,7 @@
                      ng-controller="AnnotationZoneListController">
                     <div id="errorResponseAreaforTagIds" class="errorResponseAreaforTags">
                       <div id="tagErrorList" ng-repeat="(key, item) in tagNameErrors">
-                        The annotation zone with the name "{{item.name}}" has thrown following error: {{item.text}}
+                        The annotation zone with the name "{{item.name}}" is invalid: {{item.text}}
                       </div>
                     </div>
                 </div>
