--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -14,7 +14,22 @@
 
 
 }
+#tagErrorList{
+  font-size: 9pt;
+  font-weight: bold;
+  color:red;
+}
 
+.slideRectSpan > .slideRectInput{
+  width:80%;
+  max-width: 50px;
+  min-width: 10px;
+
+}
+.slideRect{
+  min-width: 126px;
+  min-height: 26px;
+}
  .btn.btn-white.btn-link{
   padding-top: 0px;
   padding-bottom: 0px;
