add quill to comment box

--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -9,7 +9,7 @@
     <!-- breadcrumb 2nd row -->
 
     <!-- ACTION BAR switches -->
-    <div class="navbar-custom-menu" ng-show="currentTab=='preview'" ng-include
+    <div class="navbar-custom-menu" ng-show="currentTab=='preview' || currentTab=='pdf' || currentTab=='video'" ng-include
          src="'actionBar-node-preview'"></div>
     <div class="navbar-custom-menu" ng-show="currentTab=='analytics'" ng-include
          src="'actionBar-node-analytics'"></div>
