--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -23,8 +23,6 @@
                     <form name="commentForm" ng-submit="submitComment()">
                         <fieldset>
                             <div class="control-group">
-                                <!--<label for="rawText">Commenting as {{currentUser.username}}</label>-->
-
                                     <div id="rawText" name="rawText"
                                          ng-model="comment.rawText"
                                          quill type="pdf-comment">
@@ -35,35 +33,40 @@
                             <div id="annotationZoneSubmitList">
                             </div>
 
+                            <div id="annZoneList"
+                                 ng-controller="AnnotationZoneListController">
+                                <div id="errorResponseAreaforTagIds" class="errorResponseAreaforTags" ng-show="tagNameErrors">
+                                    <br class="clear">
+                                    <div id="tagErrorList" ng-repeat="(key, item) in tagNameErrors">
+                                        The annotation zone with the name "{{item.name}}" is invalid: {{item.text}}
+                                    </div>
+                                </div>
+                            </div>
+
                             <div class="control-group">
                                 <div class="controls">
                                     <br class="clear">
                                     <button class="btn btn-primary"> Add Comment
                                         <spinner show="isLoading"></spinner>
                                     </button>
-                                </div>
 
+                                    <button type="button" class="btn btn-warning" ng-click="writeCommentMode=false">Cancel</button>
+                                </div>
+                            </div>
+
+                        </fieldset>
                     </form>
                 </div>
-                <div id="annotationZoneSubmitListMovables">
+
+                <!--<div id="annotationZoneSubmitListMovables">
                     <button class="btn btn-default" onclick="createMovableAnnZone();">
                         Add Annotation Zone
                     </button>
-                </div>
+                </div>-->
 
             </div>
 
-
-            <div>
-                <div id="annZoneList" style=""
-                     ng-controller="AnnotationZoneListController">
-                    <div id="errorResponseAreaforTagIds" class="errorResponseAreaforTags">
-                      <div id="tagErrorList" ng-repeat="(key, item) in tagNameErrors">
-                        The annotation zone with the name "{{item.name}}" is invalid: {{item.text}}
-                      </div>
-                    </div>
-                </div>
-                <div class="commentZoneList">
+            <div class="commentZoneList">
                     <h4>Comments</h4>
 
                     <div class="row">
@@ -103,8 +106,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
 
         </div>
     </div>
